- input silvan implemented (styling, pages view added)

--- a/all/modules/_pixelstructure/pixel_structure/pages/home.page
+++ b/all/modules/_pixelstructure/pixel_structure/pages/home.page
@@ -123,6 +123,41 @@ $pane->uuid = '037cf25f-f925-4889-9e8e-182c9831af8a';
 $display->content['new-037cf25f-f925-4889-9e8e-182c9831af8a'] = $pane;
 $display->panels['left'][0] = 'new-037cf25f-f925-4889-9e8e-182c9831af8a';
 $pane = new stdClass();
+$pane->pid = 'new-bd066048-e9a6-4d3d-9959-badd24e038a0';
+$pane->panel = 'right';
+$pane->type = 'views';
+$pane->subtype = 'segment_pages';
+$pane->shown = TRUE;
+$pane->access = array();
+$pane->configuration = array(
+  'override_pager_settings' => 0,
+  'use_pager' => 0,
+  'nodes_per_page' => '0',
+  'pager_id' => '0',
+  'offset' => '0',
+  'more_link' => 0,
+  'feed_icons' => 0,
+  'panel_args' => 0,
+  'link_to_view' => 1,
+  'args' => '',
+  'url' => '',
+  'display' => 'block_1',
+  'override_title' => 0,
+  'override_title_text' => '',
+  'override_title_heading' => 'h2',
+);
+$pane->cache = array();
+$pane->style = array(
+  'settings' => NULL,
+);
+$pane->css = array();
+$pane->extras = array();
+$pane->position = 0;
+$pane->locks = array();
+$pane->uuid = 'bd066048-e9a6-4d3d-9959-badd24e038a0';
+$display->content['new-bd066048-e9a6-4d3d-9959-badd24e038a0'] = $pane;
+$display->panels['right'][0] = 'new-bd066048-e9a6-4d3d-9959-badd24e038a0';
+$pane = new stdClass();
 $pane->pid = 'new-a2126181-d3da-4d1f-9772-a419cccfa575';
 $pane->panel = 'top';
 $pane->type = 'views';
