--- a/all/themes/pixelgarage/less/pxlComponents/panel-structure.less
+++ b/all/themes/pixelgarage/less/pxlComponents/panel-structure.less
@@ -51,9 +51,11 @@
 
   @media @tablet {
     .panel-col-first {
+      padding-right: 10px;
       width: 50%;
     }
     .panel-col-last {
+      padding-left: 10px;
       width: 49.9%;
     }
   }
