--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -206,6 +206,9 @@
               .col-sm-6 {
                 .map-location {
                   margin-top: 0;
+                  a {
+                    text-align: left;
+                  }
                 }
               }
             }
