--- a/all/themes/pixelgarage/less/pxlComponents/node-footer.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-footer.less
@@ -148,7 +148,7 @@
         @media @tablet {
           position: absolute;
           bottom: 20px;
-          left: 63%;
+          left: ~"calc(60.4% + 15px)";
         }
         // see block-socials
       }
@@ -159,7 +159,7 @@
         @media @tablet {
           position: absolute;
           bottom: 20px;
-          left: 26%;
+          left: ~"calc(20.9% + 35px)";
         }
 
         ul.menu {
