--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -75,13 +75,15 @@
         .course-subject {
           // fachgebiet title
           h2 {
-            margin: 30px 0 0;
-            padding: 20px 0 24px;
+            display: block;
+            margin: 50px 0 0;
+            padding: 0;
+            height: 60px;
             font-family: @pxl-text-font-medium;
             font-size: @font-size-base + 2;
             color: @text-color;
             line-height: 1;
-            border-top: 1px solid @pxl-border-color;
+            //border-top: 1px solid @pxl-border-color;
           }
         }
 
