--- a/all/themes/pixelgarage/less/pxlComponents/node-page.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-page.less
@@ -63,7 +63,7 @@
 
       .field-name-title {
         h2 {
-          margin: 0;
+          margin-top: 0;
           font-family: @pxl-text-font-light;
           #pxl-mixins.font-size-responsive(@font-size-larger);
           color: @text-color;
