--- a/all/themes/pixelgarage/less/pxlComponents/view-benefits.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-benefits.less
@@ -15,7 +15,7 @@
 // -------------------------
 #block-views-benefits-block {
   h2.block-title {
-    margin: 22px 0 11px;
+    margin: 22px 0;
     font-family: @pxl-text-font-medium;
     font-size: @font-size-large;
     text-align: left;
