--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -95,12 +95,13 @@
 
           .panel-heading {
             position: relative;
-            margin-bottom: 0;
+            margin-bottom: 5px;
             padding: 0;
+            min-height: 55px;
             font-family: @pxl-text-font-light;
             line-height: 1;
             #pxl-mixins.border-radius(0);
-            background: none;
+            background-color: @pxl-color-hso-sec;
 
             .panel-title {
               display: inline-block;
