--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -56,9 +56,14 @@ body {
 
 
 .main-container {
-  margin: 0 0 50px;
+  margin: 0 0 60px;
 
   .container {
+    padding: 0 15px;
+
+    @media @tablet {
+      padding: 0 50px;
+    }
     //
     // Page header
     #page-header {
@@ -80,7 +85,7 @@ body {
 
         h1.page-header {
           //display: none;
-          margin: 30px 0 30px;
+          margin: 60px 0 30px;
           padding: 0;
           font-family: @pxl-text-font-light;
           #pxl-mixins.font-size-responsive(@font-size-h1);
