--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -203,7 +203,7 @@ header#navbar {
         nav {
           ul.menu {
             display: inline-block;
-            margin: 0;
+            margin: 0 0 5px;
             float: right;
 
             li {
