--- a/all/themes/pixelgarage/less/mixins/box-modifications.less
+++ b/all/themes/pixelgarage/less/mixins/box-modifications.less
@@ -33,8 +33,8 @@
   }
 
   // centers an element horizontally/vertically in its container (block with height)
-  .center-horizontally() {
-    position: relative;
+  .center-horizontally(@position: relative) {
+    position: @position;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
