--- a/all/themes/pixelgarage/less/pxlComponents/node-video.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-video.less
@@ -14,79 +14,53 @@
 // General settings
 // -------------------------
 .node.node-video.view-mode-teaser {
+  margin: 0 -15px;
+  padding: 20px 0;
+  background-color: @pxl-color-hso-sec;
+
   .row {
-    div.col-sm-12 {
-      width: 100%;
+    div.col-sm-6 {
+      padding: 15px 0;
+
+      &:first-child {
+        padding-right: 30px;
+      }
+      &:last-child {
+        padding-left: 30px;
+      }
 
       .field-name-title {
         h2 {
           font-family: @pxl-text-font-light;
-          #pxl-mixins.font-size-responsive(@font-size-base);
+          #pxl-mixins.font-size-responsive(@font-size-larger);
           color: @text-color;
+          line-height: 1.5;
         }
       }
 
       .field-name-field-video {
+        padding-left: 100px;
+
         .field-item {
           .file-video {
-            img {
+            iframe {
               width: 100%;
-              height: auto;
             }
           }
         }
       }
 
-      .group-video {
-        position: relative;
-        height: 25px;
-
-        .field-name-field-duration,
-        .field-name-field-views {
-          display: inline-block;
-          position: absolute;
-          margin: 0;
-          top: 5px;
-          left: 10px;
-
-          .field-item {
-            font-family: @pxl-text-font;
-            font-size: @font-size-base;
-            color: @pxl-color-gray-text;
-          }
-        }
-        .field-name-field-views {
-          left: auto;
-          right: 10px;
-        }
-      }
-
-      .field-name-post-date {
-        padding: 10px;
-        width: 100%;
-
-        .field-item {
-          font-family: @pxl-text-font;
-          font-size: 10px;
-          text-align: right;
-          color: @pxl-color-gray-text;
-
-          &:after {
-            content: '\f16a';
-            font-family: @pxl-icon-font;
-            font-size: @font-size-base;
-            margin-left: 10px;
-          }
-        }
-      }
-
       .field-name-body {
+        padding-right: 100px;
+
         #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
+        color: @pxl-color-gray-dark;
 
         @media @tablet {
           //.content-columns(2);
         }
       }
+
     }
   }
 }
