--- a/all/themes/pixelgarage/less/pxlComponents/node-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-call2action.less
@@ -85,28 +85,10 @@
               #pxl-mixins.button-large;
               opacity: 1.0;
               width: 50%;
+              background: @pxl-color-hso-main;
 
               &:hover {
                 opacity: 0.7;
-              }
-
-              .call2action-kv & {
-                background: @pxl-color-hso-kv;
-              }
-              .call2action-handel & {
-                background: @pxl-color-hso-hs;
-              }
-              .call2action-management & {
-                background: @pxl-color-hso-wm;
-              }
-              .call2action-informatik & {
-                background: @pxl-color-hso-wi;
-              }
-              .call2action-sprachen & {
-                background: @pxl-color-hso-sp;
-              }
-              .call2action-programs & {
-                background: @pxl-color-hso-pp;
               }
             }
           }
