--- a/all/themes/pixelgarage/less/pxlComponents/node-news.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-news.less
@@ -77,7 +77,7 @@
 .node.node-news.view-mode-default {
   margin: 50px auto 0;
   border-top: 2px solid @pxl-border-color;
-  max-width: 800px;
+  max-width: @pxl-max-width-page;
 
   .row {
     div.col-sm-12 {
