--- a/all/themes/pixelgarage/less/pxlComponents/node-page.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-page.less
@@ -4,7 +4,7 @@
 
 // Variables
 // -------------------------
-
+@pxl-max-width-page: 800px;
 
 // Mixins
 // -------------------------
@@ -15,7 +15,7 @@
 // -------------------------
 .node.node-page.view-mode-full,
 .node.node-news.view-mode-default {
-  max-width: 800px;
+  max-width: @pxl-max-width-page;
   margin: 0 auto;
 
   .row {
