--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -79,7 +79,7 @@
 // Node settings
 // -------------------------
 .node-webform {
-  max-width: 800px;
+  max-width: @pxl-max-width-page;
   margin: 0 auto;
   padding-bottom: 30px;
 
