--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -16,7 +16,7 @@
 // -------------------------
 .view.view-call2action {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 0;
 
   @media @normal {
     margin-top: 50px;
