--- a/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
@@ -10,6 +10,7 @@
 // -------------------------
 .links(@seg-color) {
   a {
+    font-size: 15px;
     color: @seg-color;
     text-decoration: none;
 
@@ -23,6 +24,16 @@
 
 // General settings
 // -------------------------
+#block-views-segment-pages-block-info-pages {
+  h2.block-title {
+    margin: 22px 0;
+    font-family: @pxl-text-font-medium;
+    font-size: @font-size-large;
+    text-align: left;
+    color: @text-color;
+  }
+}
+
 .view.view-segment-pages {
   .view-content {
     .views-row {
