--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -119,7 +119,7 @@
           color: #fff;
 
           .row {
-            .col-sm-6 {
+            .col-sm-4, .col-sm-8 {
               .organisation-block {
                 margin-bottom: 5px;
                 font-family: @pxl-text-font;
@@ -174,7 +174,11 @@
                 }
               }
               .map-location {
-                margin-top: 30px;
+                display: inline-block;
+                margin: 30px 0 0;
+                padding: 0;
+                width: 100%;
+                vertical-align: top;
 
                 a {
                   display: block;
@@ -182,7 +186,24 @@
 
                   img {
                     display: inline-block;
+                    width: 100% !important;
+                    max-width: 250px;
                   }
+                }
+              }
+              .location-image {
+                display: inline-block;
+                margin: 30px 0 0;
+                padding: 0;
+                width: 100%;
+                vertical-align: top;
+                text-align: center;
+
+                img {
+                  display: inline-block;
+                  width: 100%;
+                  height: auto;
+                  max-width: 250px;
                 }
               }
 
@@ -203,12 +224,20 @@
             text-align: left;
 
             .row {
-              .col-sm-6 {
+              .col-sm-8 {
                 .map-location {
-                  margin-top: 0;
+                  margin: 0 -2px;
+                  padding-right: 5px;
+                  width: 50%;
+
                   a {
                     text-align: left;
                   }
+                }
+                .location-image {
+                  margin: 0 -2px;
+                  padding-left: 5px;
+                  width: 50%;
                 }
               }
             }
