--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -94,7 +94,10 @@ body {
           line-height: 1;
           border: none;
 
-          body.node-type-course {
+          body.segments_home &,
+          body.node-type-course &,
+          body.page-informationsanlaesse &,
+          body.page-coursetimes-search & {
             max-width: none;
           }
 
