--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -19485,7 +19485,10 @@ body {
     font-size: 36px;
   }
 }
-.main-container .container .row section h1.page-header body.node-type-course {
+body.segments_home .main-container .container .row section h1.page-header,
+body.node-type-course .main-container .container .row section h1.page-header,
+body.page-informationsanlaesse .main-container .container .row section h1.page-header,
+body.page-coursetimes-search .main-container .container .row section h1.page-header {
   max-width: none;
 }
 body.segment_kv .main-container .container .row section h1.page-header {
